--- a/LastBell/Resources/DataTemplates/PagesDataTemplates.xaml
+++ b/LastBell/Resources/DataTemplates/PagesDataTemplates.xaml
@@ -5,4 +5,7 @@
     <DataTemplate DataType="{x:Type pages:MainPageViewModel}">
         <pages1:MainView DataContext="{Binding}"/>
     </DataTemplate>
+    <DataTemplate DataType="{x:Type pages:MainPageViewModel}">
+        <pages1:MainView DataContext="{Binding}"/>
+    </DataTemplate>
 </ResourceDictionary>
