--- a/LastBell/Resources/DataTemplates/PagesDataTemplates.xaml
+++ b/LastBell/Resources/DataTemplates/PagesDataTemplates.xaml
@@ -5,7 +5,7 @@
     <DataTemplate DataType="{x:Type pages:MainPageViewModel}">
         <pages1:MainView DataContext="{Binding}"/>
     </DataTemplate>
-    <DataTemplate DataType="{x:Type pages:MainPageViewModel}">
-        <pages1:MainView DataContext="{Binding}"/>
+    <DataTemplate DataType="{x:Type pages:QuizPageViewModel}">
+        <pages1:QuizView DataContext="{Binding}"/>
     </DataTemplate>
 </ResourceDictionary>
